# Knowledge-Base

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLOUDFLARE_PAGES_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  SETUP_SUMMARY.md
master_documents/: README.md
projects/: agents.md  auto_rag_open_discourse_v_0.md  cbw_baseline_starter_code_bundle(1).md  cbw_lan_xfer_suite_v_1.md  cbw_secure_autopilot_v_1(1).md  cbw_secure_autopilot_v_1.md  cloud_curio_llm_auto_deploy_improvements_pack.md  context_documents.md  kbgen_suite_tui_search_topics_docs_mode_jobs_s_3.md  lite_llm_cloudflare_tunnel_stack_cloudcurio(3).md  local_ai_packaged_hardening_political_docs_pipeline_canvas.md  open_discourse_documentation_structure_proposal.md  qwen.md  tasks.md  (+5 more)
projects/agent-mode-starter/: Makefile  README.md  pyproject.toml
projects/agent-mode-starter/configs/: globals.yaml
projects/agent-mode-starter/configs/agents/: infra-auditor.yaml  port-mapper.yaml  security-scout.yaml
projects/agent-mode-starter/docs/: AGENTS.md  SRS.md  TASKS.md
projects/agent-mode-starter/scripts/: agent_runner.py
projects/agent-mode-starter/scripts/runners/: ai_researcher.py  base.py  code_curator.py  inbox_triage.py  infra_auditor.py  port_mapper.py  security_scout.py  stale_bot.py  task_syncer.py
projects/agent-mode-starter/scripts/utils/: exec.py  io.py  logging.py  validators.py
projects/opendiscourse-mcp-aug/: README.md  pyproject.toml
projects/opendiscourse-mcp-aug/servers/mcp_govdocs/: db_pool.py  learner.py  mcp_tools.py  minio_utils.py  settings.py
scripts/: README.md
(+911 files in other folders)
